<resources>
    <string name="app_name">UTube</string>
    <string name="search">Please, type your search</string>
    <string name="settings">Settings</string>
    <string name="setting_max_results_default_value">15</string>
    <string name="setting_max_results_key">max_results_key</string>
    <string name="setting_max_results_title">Maximun number of results</string>
    <string name="setting_video_duration_default_value">any</string>
    <string name="setting_video_duration_key">video_duration_key</string>
    <string name="setting_video_duration_title">Video duration</string>
    <string name="setting_video_duration_entry_any">All</string>
    <string name="setting_video_duration_entry_long">Longer than 20 minutes</string>
    <string name="setting_video_duration_entry_medium">Between 4 and 20 minutes</string>
    <string name="setting_video_duration_entry_short">Less than 4 minutes</string>
    <string name="setting_video_duration_value_any">any</string>
    <string name="setting_video_duration_value_long">long</string>
    <string name="setting_video_duration_value_medium">medium</string>
    <string name="setting_video_duration_value_short">short</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="editor_activity_title">Title</string>
    <string name="editor_activity_published_at">Publish Date</string>
    <string name="editor_activity_duration">Duration</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="snackbar_message">Video requires a title</string>
    <string name="delete_dialog_message">Delete this video data?</string>
    <string name="empty_list">Empty list? No problem. Let\'s search for some videos and have fun</string>
    <string name="clear_database">Clear Database</string>
    <string name="upload_database">Upload Database to Firebase</string>
    <string name="download_database">Download Database from Firebase</string>
    <string name="sign_out">Sign Out</string>
</resources>
