<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/upload_database"
        android:title="@string/upload_database"
        app:showAsAction="never" />
    <item
        android:id="@+id/download_database"
        android:title="@string/download_database"
        app:showAsAction="never" />
    <item
        android:id="@+id/clear_database"
        android:title="@string/clear_database"
        app:showAsAction="never" />
    <item
        android:id="@+id/sign_out"
        android:title="@string/sign_out"
        app:showAsAction="never" />
</menu>