<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EditorActivity">

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.33" />

        <TextView
            android:id="@+id/title_textView"
            style="@style/EditorActivityTextViewStyle"
            android:text="@string/editor_activity_title"
            app:layout_constraintBottom_toBottomOf="@id/title_editText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/title_editText" />

        <EditText
            android:id="@+id/title_editText"
            style="@style/EditorActivityEditTextStyle"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@id/publishedAt_editText"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Name" />

        <TextView
            android:id="@+id/publishedAt_textView"
            style="@style/EditorActivityTextViewStyle"
            android:text="@string/editor_activity_published_at"
            app:layout_constraintBottom_toBottomOf="@id/publishedAt_editText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/publishedAt_editText" />

        <EditText
            android:id="@+id/publishedAt_editText"
            style="@style/EditorActivityEditTextStyle"
            android:inputType="date"
            app:layout_constraintBottom_toTopOf="@id/duration_editText"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/title_editText"
            tools:text="Name" />

        <TextView
            android:id="@+id/duration_textView"
            style="@style/EditorActivityTextViewStyle"
            android:text="@string/editor_activity_duration"
            app:layout_constraintBottom_toBottomOf="@id/duration_editText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/duration_editText" />

        <EditText
            android:id="@+id/duration_editText"
            style="@style/EditorActivityEditTextStyle"
            android:inputType="time"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/publishedAt_editText"
            tools:text="Name" />
    </android.support.constraint.ConstraintLayout>
</layout>